bug: fixed designer review bugs |WTEL-826|
- removed reset password underline
- resized animation icon
 - fixed scrollbar on module- pages
- fixed inline-edit multiple edit instances

--- a/src/assets/css/modules/modules.scss
+++ b/src/assets/css/modules/modules.scss
@@ -2,7 +2,7 @@
 .module-wrap {
   display: flex;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 // main content itself, without nav but with main header
