--- a/src/assets/css/modules/vuetable.scss
+++ b/src/assets/css/modules/vuetable.scss
@@ -45,7 +45,7 @@
       vertical-align: middle;
       display: inline-block;
       margin-right: 25px;
-      border: 1px dashed rgba(0, 0, 0, 0.3);
+      //border: 1px dashed rgba(0, 0, 0, 0.3);
       cursor: pointer;
     }
 
